FINAL (Create Dashboard)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -150,4 +150,135 @@
   }
 }
 
+#dashboard {
+  margin-left: 320px;
+  padding: 30px;
+  background-color: #f9f9f9;
+}
+#dashboard .dashboard {
+  padding: 20px;
+}
+#dashboard .dashboard .head {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 20px;
+}
+#dashboard .dashboard .head .title h2 {
+  color: #22c7c7;
+}
+#dashboard .dashboard .head .title h5 {
+  color: #919191;
+}
+#dashboard .dashboard .head .buttons {
+  display: flex;
+}
+#dashboard .dashboard .head .buttons .search {
+  width: 220px;
+  height: 40px;
+}
+#dashboard .dashboard .head .buttons .btn-add {
+  width: 180px;
+  height: 40px;
+  margin-left: 10px;
+  background-color: #22c7c7;
+  color: white;
+}
+#dashboard .dashboard .contents {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#dashboard .dashboard .contents .content {
+  width: 240px;
+  background-color: white;
+  border-radius: 25px;
+  margin-top: 30px;
+}
+#dashboard .dashboard .contents .content .id {
+  padding-left: 15px;
+  padding-top: 10px;
+}
+#dashboard .dashboard .contents .content .id p {
+  color: #919191;
+}
+#dashboard .dashboard .contents .content .id p span {
+  color: #22c7c7;
+}
+#dashboard .dashboard .contents .content hr {
+  height: 1px;
+  background-color: #ababab;
+}
+#dashboard .dashboard .contents .content .photo img {
+  width: 160px;
+  margin: auto;
+  border-radius: 50%;
+  display: flex;
+}
+#dashboard .dashboard .contents .content .biodata {
+  margin-top: 20px;
+  word-wrap: break-word;
+  padding: 15px;
+}
+#dashboard .dashboard .contents .content .biodata ul {
+  list-style: none;
+  padding: 0;
+}
+#dashboard .dashboard .contents .content .biodata ul li .label {
+  color: #646464;
+  font-size: 0.9em;
+}
+#dashboard .dashboard .contents .content .biodata ul li .text {
+  margin-top: -20px;
+  font-size: 1.1em;
+  color: #888888;
+  width: 100%;
+  text-overflow: ellipsis;
+}
+@media (max-width: 992px) {
+  #dashboard {
+    margin-left: 0px;
+    padding: 0px;
+  }
+  #dashboard .dashboard {
+    background-color: #ebebeb;
+  }
+  #dashboard .dashboard .head {
+    display: block;
+  }
+  #dashboard .dashboard .head .buttons {
+    width: 100%;
+    justify-content: space-around;
+  }
+  #dashboard .dashboard .head .buttons .btn-add {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+  #dashboard .dashboard .contents .content {
+    width: 320px;
+  }
+}
+@media (max-width: 575.8px) {
+  #dashboard .dashboard {
+    background-color: #ebebeb;
+  }
+  #dashboard .dashboard .head .buttons {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  #dashboard .dashboard .head .buttons .search {
+    width: 320px;
+  }
+  #dashboard .dashboard .head .buttons .btn-add {
+    width: 320px;
+  }
+}
+
+.navigation {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 320px;
+}
+
 /*# sourceMappingURL=main.css.map */
